# lzss-standalone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
.github/workflows/: cmake.yml
include/lzss/: adapter.h  circular_queue.h  config.h  lzss.h
include/lzss/adapters/: array_like.h
src/: CMakeLists.txt  circular_queue.c  circular_queue.h  decode.c  encode.c  helper.c  helper.h
test/: CMakeLists.txt  lzss_test.cpp
